<resources>
    <string name="app_name">Timer</string>
    <string name="action_settings">Einstellungen</string>
    <string name="values_not_found">Die zu übergebenden Werte konnten nicht gefunden werden!</string>
    <string name="textview_not_found">Eine Bildschirmkomponente wurde nicht gefunden!</string>
    <string name="button_not_found">Ein Button konnte nicht gefunden werden</string>
    <string name="timer_finished">Timer fertig</string>
    <string name="error">Fehler</string>
    <string name="finished">Ende</string>
    <string name="new_timr">Erstellen Sie einen neuen Timer</string>
    <string name="new_timr_created">Neuer Timer wurde erstellt</string>
    <string name="seconds">Sekunden</string>
    <string name="minutes">Minuten</string>
    <string name="hours">Stunden</string>
    <string name="ok">OK</string>
    <string name="null_timer">Ein Timer 0:0:0 ist nicht möglich!</string>
    <string name="times_exists">Der Timer %1$s existiert bereits!"</string>
    <string name="delete">Löschen</string>
    <string name="delete_text">Soll der Timer %1$s gelöscht werden?</string>
    <string name="quit">Abbrechen</string>
    <string name="double_point">:</string>
    <string name="error_unspecific">Ein Fehler ist aufgetreten!</string>
</resources>