<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_timer_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/new_timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_timr"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_timer_text">

        <TextView
            android:id="@+id/hour_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:textColor="@color/gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@id/new_hour"
            app:layout_constraintLeft_toLeftOf="@id/new_hour"
            app:layout_constraintRight_toRightOf="@id/new_hour"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/minute_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textColor="@color/gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@id/new_minute"
            app:layout_constraintLeft_toRightOf="@id/divider_one"
            app:layout_constraintRight_toRightOf="@id/new_minute"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/second_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:textColor="@color/gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@id/new_second"
            app:layout_constraintLeft_toRightOf="@id/divider_two"
            app:layout_constraintRight_toRightOf="@id/new_second"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/new_hour"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/lightgray"
            android:gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hour_textview" />

        <TextView
            android:id="@+id/divider_one"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/double_point"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/new_hour"
            app:layout_constraintTop_toBottomOf="@id/hour_textview" />

        <Spinner
            android:id="@+id/new_minute"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/lightgray"
            android:gravity="center_horizontal"
            app:layout_constraintLeft_toRightOf="@id/divider_one"
            app:layout_constraintTop_toBottomOf="@id/minute_textview" />

        <TextView
            android:id="@+id/divider_two"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/double_point"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/new_minute"
            app:layout_constraintTop_toBottomOf="@id/minute_textview"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Spinner
            android:id="@+id/new_second"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/lightgray"
            android:gravity="center_horizontal"
            app:layout_constraintLeft_toRightOf="@id/divider_two"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_textview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider_red"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout"
        app:layout_constraintLeft_toLeftOf="@id/constraint_layout"
        app:layout_constraintRight_toRightOf="@id/constraint_layout"
        android:background="@color/red"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:text="@string/ok"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_red" />

</androidx.constraintlayout.widget.ConstraintLayout>